--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="fab_transition">fab_maps</string>
     <string name="title_activity_event"> </string>
     <string name="title_activity_maps"> </string>
-    <string name="copyrights">The \"Tatva\" Logo in this Application belongs to B.N.M. Institute of Technology and shall not be copied or used in any other context.\n\nThe modules "CircleImageView" created by "Henning Dodenhof" and Glide created by "Bump Technologies" are used in this Application under the Apache Licenses 2.0 and 3.0 </string>
+    <string name="copyrights">The \"Tatva\" Logo in this Application belongs to B.N.M. Institute of Technology and shall not be copied or used in any other context.\n\nThe modules "CircleImageView" created by "Henning Dodenhof" and Glide created by "Bump Technologies" are used in this Application under the Apache Licenses 2.0 and 3.0. </string>
 
 </resources>
