--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_event"> </string>
     <string name="title_activity_maps"> </string>
     <string name="copyrights">The \"Tatva\" Logo in this Application belongs to B.N.M. Institute of Technology and shall not be copied or used in any other context. </string>
-    <string name="dev_subtext">The App Designer and Developer.</string>
+    <string name="dev_subtext">Designer and Developer.</string>
     <string name="dev_text">Aakaash Jois</string>
     <string name="google_play">Google Play</string>
     <string name="website">Website</string>
@@ -23,5 +23,6 @@
     <string name="organizer">Organizer</string>
     <string name="contact_organizer">Contact Organizer</string>
     <string name="second_prize">Second Prize</string>
+    <string name="search">Search</string>
 
 </resources>
